Require Jenkins 2.479.3 or newer and Jakarta EE 9 (#30)
* Bump baseline and dependencies

* Cleanup

* remove deprecations
* use java 17 features
* fix spotbugs issues

* Format sources with spotless