@@ -1,30 +1,36 @@
 package org.jenkinsci.plugins.unity3d.io;
 
-import com.google.common.io.Files;
-import hudson.util.ByteArrayOutputStream2;
-import org.junit.Test;
+import static org.junit.Assert.assertEquals;
 
+import hudson.util.ByteArrayOutputStream2;
 import java.io.File;
 import java.io.IOException;
 import java.nio.charset.Charset;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.StandardOpenOption;
 import java.util.concurrent.atomic.AtomicLong;
-
-import static org.junit.Assert.assertEquals;
+import org.junit.Test;
 
 /**
  * @author Jerome Lacoste
  */
 public class PipeFileAfterModificationActionTest {
-    private String originalContent = "The original content of the file\n" 
-            + "Multiple lines of \n"
-            + "Build information";
+    private String originalContent =
+            """
+            The original content of the file
+            Multiple lines of\s
+            Build information""";
 
-    private String newContent = "The new content of the file\n" 
-            + "Multiple lines of \n";
+    private String newContent =
+            """
+            The new content of the file
+            Multiple lines of\s
+            """;
 
     private String newContent2 = "Build information";
 
-    public static final Charset UTF_8 = Charset.forName("UTF-8");
+    public static final Charset UTF_8 = StandardCharsets.UTF_8;
 
     @Test
     public void simulateEditorLogRewritten() throws Exception {
@@ -39,20 +45,19 @@ public class PipeFileAfterModificationActionTest {
     private void testRewriteFile(int timeToWaitAfterRename) throws IOException, InterruptedException {
         // Given
         File fakeEditorLog = File.createTempFile("fake_editor", "log");
-        Files.write(originalContent, fakeEditorLog, UTF_8);
+        Files.writeString(fakeEditorLog.toPath(), originalContent, StandardCharsets.UTF_8);
 
         ByteArrayOutputStream2 collectedContent = new ByteArrayOutputStream2();
 
-        final PipeFileAfterModificationAction task = new PipeFileAfterModificationAction(fakeEditorLog.getAbsolutePath(), collectedContent, true);
+        final PipeFileAfterModificationAction task =
+                new PipeFileAfterModificationAction(fakeEditorLog.getAbsolutePath(), collectedContent, true);
         final AtomicLong nbBytesRead = new AtomicLong();
-        Thread t = new Thread(new Runnable() {
-            public void run() {
-                try {
-                    Long wrote = task.call();
-                    nbBytesRead.compareAndSet(0, wrote);
-                } catch (IOException e) {
-                    e.printStackTrace();
-                }
+        Thread t = new Thread(() -> {
+            try {
+                Long wrote = task.call();
+                nbBytesRead.compareAndSet(0, wrote);
+            } catch (IOException e) {
+                e.printStackTrace();
             }
         });
         t.start();
@@ -64,13 +69,14 @@ public class PipeFileAfterModificationActionTest {
 
         Thread.sleep(timeToWaitAfterRename);
 
-        Files.write(newContent, fakeEditorLog, UTF_8);
+        Files.writeString(fakeEditorLog.toPath(), newContent, StandardCharsets.UTF_8);
         Thread.sleep(20);
-        Files.append(newContent2, fakeEditorLog, UTF_8);
+        Files.writeString(fakeEditorLog.toPath(), newContent2, StandardCharsets.UTF_8, StandardOpenOption.APPEND);
         Thread.sleep(80);
         String expectedContent = newContent + newContent2;
 
-        // simulate remote cancellation. Using the remoting API, we cancel the task and this interrupts the remote thread
+        // simulate remote cancellation. Using the remoting API, we cancel the task and this interrupts the remote
+        // thread
         t.interrupt();
         // give us the time to terminate properly the task
         Thread.sleep(50);
